src/ApiGateways/Envoy/Infrastructure/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  profile_path: /tmp/envoy.prof
  address:
    socket_address: { address: 127.0.0.1, port_value: 9901 }
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 8000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /dev/stdout
                http_filters:
                  - name: envoy.filters.http.router
                route_config:
                  name: brevien_backend_route
                  virtual_hosts:
                    - name: brevien_backend
                      domains: [ "*" ]
                      routes:
                        - match:
                            prefix: "/ic/"
                          route:
                            auto_host_rewrite: true
                            prefix_rewrite: "/"
                            cluster: identity-control
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                tls_certificates:
                  - certificate_chain:
                      filename: "/etc/ssl/certs/https.crt"
                    private_key:
                      filename: "/etc/ssl/certs/key.pem"
                validation_context:
                  trusted_ca:
                    filename: /etc/ssl/certs/ca-certificates.crt
  clusters:
    - name: identity-control
      connect_timeout: 10s
      type: LOGICAL_DNS
      load_assignment:
        cluster_name: identity-control
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: identity-control-api
                      port_value: 80
